# eyeqwst

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: wasm.yml
crates/quaddlecl/: Cargo.toml  README.md
crates/quaddlecl/src/: errors.rs  lib.rs  snowflake.rs
crates/quaddlecl/src/client/: gateway.rs  http.rs  mod.rs
crates/quaddlecl/src/model/: channel.rs  message.rs  mod.rs  snowflake.rs  user.rs
src/: auth_screen.rs  channel_select.rs  config.rs  editor.rs  gateway.rs  lib.rs  main.rs  main_screen.rs  messageview.rs  toggle_button.rs  utils.rs
web/: index.html
