workspace = { members = ["crates/quaddlecl"] }
[package]
name = "eyeqwst"
version = "0.0.2"
edition = "2021"

[dependencies]
futures = "0.3.30"
iced = { version = "0.12.1", features = ["tokio", "webgl"] }
iced_aw = { version = "0.8.0", features = ["drop_down"], default-features = false }
quaddlecl = { path = "crates/quaddlecl" }
url = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
log = "0.4.21"
serde_with = "3.8.1"
chrono = "0.4.38"
serde_json = "1.0.116"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5.0.1"
tokio = "1.37.0"
env_logger = "0.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.91"
console_log = "1.0"

# https://github.com/tomaka/wasm-timer/pull/13
[patch.crates-io]
wasm-timer = { git = "https://github.com/dodomorandi/wasm-timer", branch = "parking-lot-wasm-bindgen" }
