[package]
name = "quaddlecl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "http2", "charset", "json"] }
reqwest-websocket = "0.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.37", features = ["macros"] }
